--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 DB_URL="mongodb+srv://swaptrackerDefi:Swap123@cluster0.r0abn.mongodb.net/Cluster0?retryWrites=true&w=majority"
-WBNB="0xbb4cdb9cbd36b01bd1cbaebf2de08d9173bc095c" 
-WETH="0xc02aaa39b223fe8d0a0e5c4f27ead9083c756cc2" 
+WBNB=0xbb4cdb9cbd36b01bd1cbaebf2de08d9173bc095c 
+WETH=0xc02aaa39b223fe8d0a0e5c4f27ead9083c756cc2 
