--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "fetch-prices": "node fetch-prices.js"
+    "fetch-prices": "node fetch-prices.js",
+    "start": "node index.js"
   },
   "author": "",
   "license": "ISC",
