--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
 DB_URL="mongodb+srv://swaptrackerDefi:Swap123@cluster0.r0abn.mongodb.net/Cluster0?retryWrites=true&w=majority"
 WBNB=0xbb4cdb9cbd36b01bd1cbaebf2de08d9173bc095c 
 WETH=0xc02aaa39b223fe8d0a0e5c4f27ead9083c756cc2 
+BUSD=0xe9e7CEA3DedcA5984780Bafc599bD69ADd087D56
+USDT=0x55d398326f99059fF775485246999027B3197955
+SWPT=0x01832e3346fd3a0d38ca589d836bd78d1de7030c
